[gd_scene load_steps=4 format=3 uid="uid://cuv1fhpdbb5su"]

[ext_resource type="Script" path="res://scenes/unit/skills/melee_attack.gd" id="1_fy7tn"]
[ext_resource type="PackedScene" uid="uid://bp7hd4rdex5do" path="res://scenes/unit/skills/skill_state_timers.tscn" id="2_kim70"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_3b7ho"]
size = Vector2(10, 10)

[node name="MeleeAttack" type="Node2D"]
script = ExtResource("1_fy7tn")
base_cast_time = 1.0
base_active_time = 0.2

[node name="SkillStateTimers" parent="." instance=ExtResource("2_kim70")]

[node name="AttackArea" type="Area2D" parent="."]
position = Vector2(16, 0)
collision_layer = 0
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="AttackArea"]
shape = SubResource("RectangleShape2D_3b7ho")
disabled = true

[connection signal="body_entered" from="AttackArea" to="." method="_on_attack_area_body_entered"]
